--- a/venue.html
+++ b/venue.html
@@ -56,7 +56,6 @@
             display: block;
         }
 
-        /* 修正箇所：背景をさらに薄く（0.85 → 0.6）調整 */
         .venue-card {
             background: rgba(255, 255, 255, 0.6); 
             backdrop-filter: blur(12px); 
@@ -77,7 +76,7 @@
 
         .venue-address { 
             font-size: 0.9rem; 
-            color: var(--text-color); /* 視認性のため少し濃くしました */
+            color: var(--text-color); 
             margin-bottom: 40px; 
             display: block; 
             letter-spacing: 0.05em;
@@ -94,7 +93,6 @@
             background: #f0f0f0;
         }
         
-        /* 修正箇所：Googleマップの埋め込み設定 */
         .map-frame { 
             width: 100%; 
             height: 100%; 
@@ -127,10 +125,47 @@
         
         .back-link:hover { opacity: 0.7; }
 
+        /* --- モバイル対応修正 --- */
         @media (max-width: 768px) {
-            .container { padding: 60px 20px; }
-            .venue-card { padding: 40px 20px; }
-            .map-wrapper { height: 300px; }
+            body {
+                background-position: center top; /* 柳が映るように上基準に設定 */
+            }
+            .container { 
+                padding: 40px 15px; /* 全体の余白を詰める */
+            }
+            .title-area {
+                margin-bottom: 30px;
+            }
+            .page-title {
+                font-size: 1.6rem;
+            }
+            .venue-card { 
+                width: 92%; /* カードの幅を少し絞って背景を見せる */
+                margin: 0 auto 20px;
+                padding: 30px 20px; /* カード内の余白を大幅にカット */
+            }
+            .venue-name {
+                font-size: 1.1rem;
+                margin-bottom: 10px;
+            }
+            .venue-address {
+                font-size: 0.75rem;
+                margin-bottom: 25px;
+            }
+            .map-wrapper { 
+                height: 250px; /* マップをコンパクトに */
+                margin-bottom: 25px;
+            }
+            .access-info {
+                font-size: 0.75rem;
+                padding-left: 15px;
+            }
+            .access-info p {
+                margin: 8px 0;
+            }
+            .back-link {
+                margin-top: 40px;
+            }
         }
     </style>
 </head>
@@ -148,7 +183,7 @@
             <div class="map-wrapper">
                 <iframe 
                     class="map-frame"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.4328575031444!2d136.89975767635677!3d35.17075675849487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6003712b3252570d%3A0xc023c74900a6e026!2zVEhFIEtBV0FCVU4gTkFHT1lB!5e0!3m2!1sja!2sjp!4v1707120000000!5m2!1sja!2sjp" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.272102143093!2d136.89721757644116!3d35.17475147275466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600376d860000001%3A0x7d0f19e917d59187!2zVEhFIEtBV0FCVU4gTkFHT1lB!5e0!3m2!1sja!2sjp!4v1700000000000!5m2!1sja!2sjp" 
                     allowfullscreen="" 
                     loading="lazy" 
                     referrerpolicy="no-referrer-when-downgrade">
@@ -156,8 +191,8 @@
             </div>
 
             <div class="access-info">
-                <p>・地下鉄桜通線・鶴舞線「丸の内」駅 4番出口より徒歩5分</p>
-                <p>・地下鉄東山線・名城線「栄」駅よりタクシーで約5分</p>
+                <p>・地下鉄「丸の内」駅 4番出口より徒歩5分</p>
+                <p>・地下鉄「栄」駅よりタクシーで約5分</p>
             </div>
         </div>
 
