--- a/venue.html
+++ b/venue.html
@@ -129,6 +129,7 @@
         @media (max-width: 768px) {
             body {
                 background-position: center top; /* 柳が映るように上基準に設定 */
+                background-size: 130%;
             }
             .container { 
                 padding: 40px 15px; /* 全体の余白を詰める */
@@ -140,7 +141,7 @@
                 font-size: 1.6rem;
             }
             .venue-card { 
-                width: 92%; /* カードの幅を少し絞って背景を見せる */
+                width: 90%; /* カードの幅を少し絞って背景を見せる */
                 margin: 0 auto 20px;
                 padding: 30px 20px; /* カード内の余白を大幅にカット */
             }
