--- a/index.html
+++ b/index.html
@@ -211,10 +211,12 @@
             <div class="message-text">
                 謹啓<br><br>
                 木々の緑が深くなる季節<br>
-                皆様におかれましては 益々ご清祥のこととお慶び申し上げます<br>
+                皆様におかれましては<br>
+                益々ご清祥のこととお慶び申し上げます<br>
                 この度 私たちは結婚式を挙げる運びとなりました<br>
-                日頃お世話になっている皆様と 穏やかなひとときを過ごせれば幸いです<br>
-                <div style="color:var(--gold-accent); font-size:0.9rem; margin-top:40px; font-weight:700;">
+                日頃お世話になっている皆様と<br>
+                穏やかなひとときを過ごせれば幸いです<br>
+                <div style="color:var(--gold-accent); font-size:0.7rem; margin-top:40px; font-weight:700;">
                     お手数ですが 2026年4月15日までに<br>
                     下記「ご出席回答」より回答をお願い申し上げます
                 </div>
